frontend/test/should_fail/defYield_008c.grg
using defYield;

test t
{
	y:B;
---
	def x:B;
	yield { y = x; }
}

pattern p(x:B --- def z:B)
{
---
	yield { x = z; }
}
